[package]
name = "caldav_client"
version = "0.1.0"
authors = ["Marshal SHI <marshalshi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.1"
reqwest = "0.10"
tokio = { version ="0.2", features=["full"] }
minidom = "0.12"
strfmt = "0.1.6"
